# earth-frequencies-data

./: .gitignore  LICENSE  LICENSE.md  README.md  ReadMe.txt  data-sources.md  data-sources.txt  index.html  readme.md  region-tree.txt
.github/workflows/: python_checks.yaml  viz_diff.yml
allocations/: ca.json  itu-region1.json
channels/: cb.json
data/: itu-regions.csv  itu-regions.tsv
data/allocation-tables/: metadata.txt
data/allocation-tables/ad/: allocations.tsv  allocations.txt  metadata.tsv
data/ca/: allocations.txt  footnotes.txt
data/eu/: european-standards.txt
data/itu/: footnotes.txt
data/misc/: approximate-itu-regions.kml  band names.numbers  named-frequencies.tsv
js/protos/: frequencies_pb.js
protos/: frequencies.proto
python/: .pylintrc  mypy.ini  pyproject.toml
python/frequencies_converter/: config.py  converter.py  fixtures.py  run_converter.py  test_merge_intervals.py
python/frequencies_converter/models/: allocation.py  allocation_service.py  allocation_table.py  frequency_allocation.py  frequency_allocation_block.py  frequency_band.py  frequency_entry.py  test_allocation_table.py
python/frequencies_converter/protos/: frequencies_pb2.py
python/scripts/: checks
rest/tables/: index.html  index.json
scripts/: generate_protos.sh  run_converter.sh
scripts/nodejs/: add-category-column.js  convert-ca.js  convert-uk.js  generate-json.js  package.json
scripts/python/: .pylintrc
viewer/: allocation-chart.html  index.html
viewer/js/: allocation-chart.js  full-table.js  spectrum.js  utility-functions.js
(+157 files in other folders)
