[tool.poetry]
name = "frequencies_converter"
version = "0.1.0"
description = ""
authors = ["Julien Lhermitte <jrmlhermitte@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
flake8 = "^4.0.1"
black = "^21.11b1"
pylint = "^2.12.1"
mypy = "^0.910"
mashumaro = "^2.9"
fire = "^0.4.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
